--- a/wordle.html
+++ b/wordle.html
@@ -2,26 +2,32 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Page Title</title>
+    <title>Wordle</title>
     <link href='style.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <div class="wordle">
-        <div class="grid">
-            <div class="row" id="row0"></div>
-            <div class="row" id="row1"></div>
-            <div class="row" id="row2"></div>
-            <div class="row" id="row3"></div>
-            <div class="row" id="row4"></div>
+    <div class="container">
+        <div class="option">
+            <img src="https://img.icons8.com/external-bearicons-detailed-outline-bearicons/64/FFFFFF/external-Option-audio-and-video-bearicons-detailed-outline-bearicons.png" alt="external-Option-audio-and-video-bearicons-detailed-outline-bearicons"/>
         </div>
-        <div class="input-section">
-            <div class="input-case" id="wordStep0"></div>
-            <div class="input-case" id="wordStep1"></div>
-            <div class="input-case" id="wordStep2"></div>
-            <div class="input-case" id="wordStep3"></div>
-            <div class="input-case" id="wordStep4"></div>
+        <div class="wordle">
+            <div class="grid">
+                <div class="row" id="row0"></div>
+                <div class="row" id="row1"></div>
+                <div class="row" id="row2"></div>
+                <div class="row" id="row3"></div>
+                <div class="row" id="row4"></div>
+            </div>
+            <div class="input-section">
+                <div class="input-case" id="wordStep0"></div>
+                <div class="input-case" id="wordStep1"></div>
+                <div class="input-case" id="wordStep2"></div>
+                <div class="input-case" id="wordStep3"></div>
+                <div class="input-case" id="wordStep4"></div>
+            </div>
         </div>
     </div>
+    
 
 </body>
 <script src='script.js'></script>
