--- a/wordle.html
+++ b/wordle.html
@@ -18,13 +18,13 @@
                 <div class="row" id="row3"></div>
                 <div class="row" id="row4"></div>
             </div>
-            <div class="input-section">
-                <div class="input-case" id="wordStep0"></div>
-                <div class="input-case" id="wordStep1"></div>
-                <div class="input-case" id="wordStep2"></div>
-                <div class="input-case" id="wordStep3"></div>
-                <div class="input-case" id="wordStep4"></div>
-            </div>
+        </div>
+        <div class="reveal-section">
+            <div id="reveal0"></div>
+            <div id="reveal1"></div>
+            <div id="reveal2"></div>
+            <div id="reveal3"></div>
+            <div id="reveal4"></div>
         </div>
     </div>
     
